--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hackerbone/mdpdfmake.git"
+    "url": "git+https://github.com/hackerbone/mdpdfmake.git"
   },
   "keywords": [
     "markdown",
